src/main/java/com/example/corebank/common/error/AccountNotFoundException.java
package com.example.corebank.common.error;

public class AccountNotFoundException extends RuntimeException {
    public AccountNotFoundException(String message) {
        super(message);
    }
}
